--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-bootstrap": "^2.10.2",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
